# Orbix

./: LICENSE
Orbix-Backend/: pyproject.toml  requirements.txt
Orbix-Backend/app/: main.py
Orbix-Backend/app/api/: router.py
Orbix-Backend/app/api/v1/: __init__.py  solar_system.py
Orbix-Backend/app/clients/: base.py  jpl_horizons.py  nasa_images.py  solar_system_open_data.py
Orbix-Backend/app/core/: config.py
Orbix-Backend/app/schemas/: __init__.py  solar_system.py
Orbix-Backend/app/services/: mappers.py  planets.py  stars.py
Orbix-Backend/tests/: conftest.py  test_health.py  test_solar_system.py
OrbixFronted/orbix-frontend/: .env  index.html  package-lock.json  package.json
OrbixFronted/orbix-frontend/src/: App.tsx  index.css  main.tsx
OrbixFronted/orbix-frontend/src/celestial/components/: OrbitPath.tsx  OrbitTrail.tsx  PlanetMesh.tsx  PlanetRing.tsx  SunMesh.tsx
OrbixFronted/orbix-frontend/src/celestial/systems/: OrbitalBody.tsx  SolarSystem.tsx
OrbixFronted/orbix-frontend/src/components/planet/: PlanetInfoPanel.tsx
OrbixFronted/orbix-frontend/src/config/: planets.ts
OrbixFronted/orbix-frontend/src/data/: planetUi.ts
OrbixFronted/orbix-frontend/src/lib/: api.ts
OrbixFronted/orbix-frontend/src/pages/: CelestialDetailsPage.tsx  HomePage.tsx
OrbixFronted/orbix-frontend/src/scene/components/: SceneCamera.tsx  SceneEnvironment.tsx  SceneLights.tsx  SpaceScene.tsx
OrbixFronted/orbix-frontend/src/scene/controls/: CameraControls.tsx
OrbixFronted/orbix-frontend/src/types/: api.ts  planet.ts  scene.ts
