[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orbix-backend"
version = "0.1.0"
description = "Backend API for Orbix"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "uvicorn",
]
